outputs/main/reevo-qd_bpp_online_2025-08-07_22-29-22/problem_iter2_response9.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 74
    PENALTY_WEIGHT = 0.5.0 * 1e-1  # Adjust weight as needed; here 0.5
                        ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 74
    PENALTY_WEIGHT = 0.5.0 * 1e-1  # Adjust weight as needed; here 0.5
                        ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 74
    PENALTY_WEIGHT = 0.5.0 * 1e-1  # Adjust weight as needed; here 0.5
                        ^^
SyntaxError: invalid syntax
